# squizz

./: CHANGELOG.md  LICENSE  Makefile  README.md  squizz.cabal
app/: Main.hs
src/: MyLib.hs
src/Squizz/: PPM.hs  Rasterize.hs  TestImages.hs  Types.hs
test/: Example.hs  Main.hs  TastyDriver.hs
