cabal-version:   3.0
name:            squizz
version:         0.1.0.0
license:         BSD-2-Clause
license-file:    LICENSE
author:          Jonathan Merritt
maintainer:      j.s.merritt@gmail.com
copyright:       Copyright (C) Jonathan Merritt 2023
category:        Graphics
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wmissing-import-lists

library
  import:           warnings
  exposed-modules:  MyLib
  build-depends:    base ^>=4.19
  hs-source-dirs:   src
  default-language: GHC2021

executable squizz
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base    ^>=4.19
    , squizz

  hs-source-dirs:   app
  default-language: GHC2021

test-suite squizz-test
  build-tool-depends: tasty-discover:tasty-discover
  import:             warnings
  default-language:   GHC2021
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:
    Example
    TastyDriver

  build-depends:
    , base         ^>=4.19
    , doctest      ^>=0.22.2
    , hspec        ^>=2.11.7
    , squizz
    , tasty        ^>=1.5
    , tasty-hspec  ^>=1.2.0.3
